# QMLApplicationTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/: Functions.cmake  PostInstall.in.cmake  info.in.cpp  info.plist.in  meta.hpp.in
doc/: setup.md
res/icons/: BaseApp.icns
res/qml/App/: window.qml
res/qml/Lib/: qmldir
res/qml/lib/: Icon.qml  Label.qml
res/qml/view/: Window.qml
src/App/: appController.cpp  appController.hpp  appInfo.cpp  appInfo.hpp  appInstance.cpp  appInstance.hpp  appQmlRegister.cpp  appQmlRegister.hpp
src/app/: App.cpp  App.h  AppConfig.cpp  AppConfig.h  AppController.cpp  AppController.h  AppInfo.cpp  AppInfo.h  AppMenu.cpp  AppMenu.h  AppWindow.cpp  AppWindow.h  main.cpp
